<resources>
    <string name="app_name">Graduation work</string>
    <string name="oo_td">OO\nTD</string>
    <string name="profile_re_name">유광진</string>
    <string name="profile_re_Body">MEN · 174cm · 63kg · 260mm</string>
    <string name="profile_re_post">Post</string>
    <string name="profile_re_following">Following</string>
    <string name="profile_re_follower">Follower</string>
    <string name="profile_re_ca_style">Style</string>
    <string name="profile_re_ca_review">Review</string>
    <string name="profile_re_ca_collection">Collection</string>
    <string name="profile_re_ca_scrap">Scrap</string>
    <string name="style_back">Back</string>
    <string name="Style_page_logo">Style</string>
    <string name="Style_page_info_name">유광진</string>
    <string name="Style_page_info_body">MEN · 174cm · 63kg · 260mm</string>
    <string name="comments_back">Back</string>
    <string name="comments_name">유광진</string>
    <string name="comments_body">MEN · 174cm · 63kg · 260mm</string>
    <string name="comments_main_info">댓글을 남겨주세요!</string>
    <string name="comments_ex">댓글 달기</string>
    <string name="style_page_comments_ex">첫 댓글을 남겨주세요.</string>
    <string name="profile_re_post_count">1</string>
    <string name="profile_re_following_count">1</string>
    <string name="profile_re_follower_count">1</string>
    <string name="signup_re_logo">회원가입</string>
    <string name="signup_re_back">Back</string>
    <string name="signup_re_email">이메일 *</string>
    <string name="signup_re_ex">예)abcg1234@naver.com</string>
    <string name="signup_re_pwd">비밀번호 *</string>
    <string name="signup_re_pwd_ex">영문, 숫자 조합 8~16자</string>
    <string name="signup_re_pwd_check">비밀번호 확인 *</string>
    <string name="signup_re_pwd_check_ex">영문, 숫자 조합 8~16자</string>
    <string name="signup_re_name">이름 *</string>
    <string name="signup_re_name_ex">예) 홍길동</string>
    <string name="signup_re_phone">휴대폰 번호 *</string>
    <string name="signup_re_phone_ex">예) 010-1234-5678</string>
    <string name="signup_re_height">키 *</string>
    <string name="signup_re_height_ex">예) 173cm</string>
    <string name="signup_re_weight">몸무게 *</string>
    <string name="signup_re_weight_ex">예) 64kg</string>
    <string name="signup_re_gender">성별 *</string>
    <string name="signup_re_gender_ex">예) 남자, 여자</string>
    <string name="signup_re_shoes">신발 사이즈 *</string>
    <string name="signup_re_shoes_ex">예) 260mm</string>
    <string name="signup_re_signup">회원가입</string>
    <string name="login_re_logo">로그인</string>
    <string name="login_re_back">Back</string>
    <string name="login_re_info_email">Email</string>
    <string name="login_re_info_pwd">Password</string>
    <string name="login_re_bt_login">로그인</string>
    <string name="login_re_bt_signup">회원가입</string>
    <string name="login_re_pw_find">비밀번호 찾기</string>
    <string name="uploading_re_logo">업로드 하기</string>
    <string name="uploading_re_back">Back</string>
    <string name="uploading_re_ex">Look 또는 Item을 업로드 하여 스타일 크리에이터가 되어보세요.</string>
    <string name="style_upload_look_logo">LOOK ></string>
    <string name="style_upload_ex">4:5 비율로 착샷을 올릴 수 있어요.</string>
    <string name="item_upload_logo">ITEM ></string>
    <string name="item_upload_ex">1:1 비율로 아이템을 올릴 수 있어요.</string>
    <string name="homepage_market">OOTD</string>
    <string name="homepage_main_search">Search</string>
    <string name="homepage_main_id">실시간 랭킹</string>
    <string name="homepage_main_id2">오늘의 OOTD</string>
    <string name="uploading_re_comment_logo">사진 올리기</string>
    <string name="uploading_re_comment_Back">Back</string>
    <string name="uploading_re_comment_ex">제목을 입력하세요.</string>
    <string name="uploading_re_comment_register">등록하기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_info">검색</string>
    <string name="likelist_back">Back</string>
    <string name="likelist_text">좋아요</string>
    <string name="profile_re_follower_info">팔로우</string>
    <string name="profile_re_follower_info2">팔로잉</string>
    <string name="profile_re_message_info">메세지</string>
    <string name="following_follower_Back">Back</string>
    <string name="user_info">유광진</string>
    <string name="following_logo">Following</string>
    <string name="follower_logo">Follower</string>


</resources>
