<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_jin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/profile_jin">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/profile_re_"
                android:layout_width="411dp"
                android:layout_height="377dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="-1dp"
                android:background="@drawable/profile_re_header"
                android:clipToOutline="true">

                <TextView
                    android:id="@+id/oo_td"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="top"
                    android:text="@string/oo_td"
                    android:textAppearance="@style/oo_td" />
            </RelativeLayout>

            <TextView
                android:id="@+id/profile_re_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="386dp"
                android:gravity="top"
                android:text="@string/profile_re_name"
                android:textAppearance="@style/profile_re_name" />

            <TextView
                android:id="@+id/profile_re_Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="19dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="431dp"
                android:text="@string/profile_re_Body"
                android:textAppearance="@style/profile_re_Body"
                android:gravity="top"
                />
            <RelativeLayout
                android:id="@+id/profile_re_info"
                android:layout_width="411dp"
                android:layout_height="143dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="494dp"
                android:clipToOutline="true">
                <TextView
                    android:id="@+id/profile_re_post_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="42dp"
                    android:text="@string/profile_re_post_count"
                    android:textAppearance="@style/profile_re_post_count"
                    android:gravity="top"
                    />
                <TextView
                    android:id="@+id/profile_re_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="36dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="78dp"
                    android:text="@string/profile_re_post"
                    android:textAppearance="@style/profile_re_post"
                    android:gravity="top"
                    />
                <TextView
                    android:id="@+id/profile_re_following_count"
                    android:layout_width="9dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="195dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="42dp"
                    android:text="@string/profile_re_following_count"
                    android:textAppearance="@style/profile_re_following_count"
                    android:gravity="top"
                    />
                <TextView
                    android:id="@+id/profile_re_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="158dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="78dp"
                    android:text="@string/profile_re_following"
                    android:textAppearance="@style/profile_re_following"
                    android:gravity="top"
                    />
                <TextView
                    android:id="@+id/profile_re_follower_count"
                    android:layout_width="9dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="336dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="42dp"
                    android:text="@string/profile_re_follower_count"
                    android:textAppearance="@style/profile_re_follower_count"
                    android:gravity="top"
                    />
                <TextView
                    android:id="@+id/profile_re_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="298dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="78dp"
                    android:text="@string/profile_re_follower"
                    android:textAppearance="@style/profile_re_follower"
                    android:gravity="top"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/profile_re_categori"
                android:layout_width="411dp"
                android:layout_height="52dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="637dp"
                android:clipToOutline="true"
                android:background="@drawable/profile_re_edge">

                <TextView
                    android:id="@+id/profile_re_ca_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/profile_re_ca_style"
                    android:textAppearance="@style/profile_re_ca_style"
                    android:gravity="top"
                    />
                <TextView
                    android:id="@+id/profile_re_ca_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="109dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#808080"
                    android:text="@string/profile_re_ca_review"
                    android:textAppearance="@style/profile_re_ca_review"
                    android:gravity="top"
                    />
                <TextView
                    android:id="@+id/profile_re_ca_collection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="205dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#808080"
                    android:text="@string/profile_re_ca_collection"
                    android:textAppearance="@style/profile_re_ca_collection"
                    android:gravity="top"
                    />
                <TextView
                    android:id="@+id/profile_re_ca_scrap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="330dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#808080"
                    android:text="@string/profile_re_ca_scrap"
                    android:textAppearance="@style/profile_re_ca_scrap"
                    android:gravity="top"
                    />
            </RelativeLayout>

            <FrameLayout
                android:id="@+id/profile_re_show_img"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="688dp"
                android:clipToOutline="true"
                android:orientation="horizontal">
            </FrameLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/home"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/homepage_home" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/serch"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/homepage_search" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/check"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/homepage_check" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/message"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/homepage_message" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/my"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/homepage_profile" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
