
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/comments_content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/comments_header"
                android:layout_width="411dp"
                android:layout_height="147dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:clipToOutline="true">

                <TextView
                    android:id="@+id/comments_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="27dp"
                    android:layout_marginRight="325dp"
                    android:layout_marginBottom="100dp"
                    android:gravity="top"
                    android:text="@string/comments_back"
                    android:textAppearance="@style/comments_back"/>
                <TextView
                    android:id="@+id/comments_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="17dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="65dp"
                    android:text="@string/comments_name"
                    android:textAppearance="@style/comments_name"
                    android:gravity="top"
                    />
                <TextView
                    android:id="@+id/comments_body_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="17dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="110dp"
                    android:text="@string/comments_body"
                    android:textAppearance="@style/comments_body"
                    android:gravity="top"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/comments_main"
                android:layout_width="411dp"
                android:layout_height="551dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="147dp"
                android:clipToOutline="true">

                <TextView
                    android:id="@+id/comments_main_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="146dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="128dp"
                    android:text="@string/comments_main_info"
                    android:textAppearance="@style/comments_main_info"
                    android:gravity="top"
                    />
            </RelativeLayout>

            <View
                android:id="@+id/comments_Register"
                android:layout_width="411dp"
                android:layout_height="51dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="697dp"/>

            <EditText
                android:id="@+id/comments_ex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="704dp"
                android:gravity="top"
                android:hint="@string/comments_ex"
                android:textAppearance="@style/comments_ex" />

            <ImageView
                android:id="@+id/Comments_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="365dp"
                android:layout_marginTop="710dp"
                android:src="@drawable/point" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
